basic version of line graph done. Hardcoded values for now

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".EnterHeightActivity"></activity>
+        <activity android:name=".StepsChart"></activity>
     </application>
 
 </manifest>
