added timeCalculator mocking test, added stepCounter Unit test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
     lintOptions {
         warning 'InvalidPackage'
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 repositories {
