--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,13 @@ android {
         }
     }
     repositories {
-        maven {url "https://jitpack.io"}
+        maven { url "https://jitpack.io" }
     }
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
