--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
         - restore_cache:
             key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
         - run:
+            name: Chmod permissions
+            command: sudo chmod +x ./gradlew
+        - run:
             name: Build debug APK and release APK
             command: |
               ./gradlew :app:assembleDebug
