--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,8 @@
 {
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ],
-    "source": "functions"
+      "npm --prefix \"%RESOURCE_DIR%\" run lint"
+    ]
   },
   "firestore": {
     "rules": "firestore.rules",
